AssetCache.
